# rice

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  SYNTAX.md
.github/: copilot-instructions.md
.junie/: guidelines.md
docs/: README.md  compiler.md  console.md  error-handling.md  file-io.md  language-reference.md  multi-module.md  print-using.md  procedures.md  quickstart.md  user-defined-types.md
src/: ast.rs  builtins.rs  environment.rs  error.rs  format_using.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  repl.rs  token.rs  value.rs
src/compiler/: cranelift_codegen.rs  ir.rs  linker.rs  lower.rs  mod.rs
src/runtime/: io_ffi.rs  mod.rs  value_ffi.rs
tests/: compile_integration.rs  integration.rs
tests/programs/: arithmetic.bas  clear_test.bas  data_read.bas  def_fn.bas  deftype.bas  do_loop.bas  factorial.bas  file_append.bas  file_binary.bas  file_freefile.bas  file_text_io.bas  file_write_read.bas  gosub.bas  lset_rset.bas  mid_assign.bas  on_goto.bas  randomize.bas  select_case.bas  shared_test.bas  static_sub.bas  static_test.bas  string_funcs.bas  sub_test.bas  type_array.bas  type_basic.bas  type_sub.bas  variables.bas  while_loop.bas  write_stmt.bas
