[package]
name = "rice"
version = "0.9.0"
edition = "2024"
license = "MIT"

[dependencies]
thiserror = "2"
rustyline = "17"
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
crossterm = "0.28"

[[bin]]
name = "rice"
path = "src/main.rs"

[[bin]]
name = "rice-lsp"
path = "src/bin/rice_lsp.rs"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
