[package]
name = "rice"
version = "0.10.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
thiserror = "2"
rustyline = "17"
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
crossterm = "0.28"
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-module = "0.116"
cranelift-object = "0.116"
cranelift-native = "0.116"
target-lexicon = "0.13"

[[bin]]
name = "rice"
path = "src/main.rs"

[[bin]]
name = "rice-lsp"
path = "src/bin/rice_lsp.rs"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
